--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,11 @@ dependencies:
       url: https://github.com/imaNNeoFighT/fl_chart.git
       ref: main 
   file_picker: ^8.0.0
-  path_provider: ^2.0.0
   universal_html: ^2.0.9
   flutter_colorpicker: ^1.0.3
+  flutter_pdfview: ^1.3.2
+  path_provider: ^2.1.2
+  web_socket_channel: ^2.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -69,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
