--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,11 @@ dependencies:
   flutter_pdfview: ^1.3.2
   path_provider: ^2.1.2
   web_socket_channel: ^2.4.0
-
+  collection: ^1.18.0
+  cupertino_icons: ^1.0.8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  
 
 dev_dependencies:
   flutter_test:
